--- a/aso.css
+++ b/aso.css
@@ -20,3 +20,8 @@ h2{
 .lis{
     margin-left: 30px;
 }
+img{
+    background-color: brown;
+    border: 7px solid green;
+    margin: 10px 2px 10px 2px;
+}
